<resources>
    <string name="app_name">Card Game App</string>
    <string name="log_out">Log out from FireBase</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="eng">English</string>
    <string name="heb">Hebrew</string>
    <string name="sound">Sound</string>
    <string name="choose">Choose Language</string>
    <string name="avatar">Choose Your Avatar</string>
    <string name="back">Back</string>
    <string name="What_is_in_the_picture">What is in the picture</string>
    <string name="Similar">Find Similarity</string>
    <string name="Different">What is the difference</string>
    <string name="string_login_b_text">Login</string>
    <string name="email_address">Email</string>
    <string name="getContinue">Continue</string>
    <string name="fui_password_hint">Password</string>
    <string name="register">Register</string>
    <string name="endGame">End Game</string>
    <string name="yourScore">Your Score</string>
    <string name="play">Play</string>
    <string name="fullname">Full Name</string>
    <string name="nickname">Username</string>
    <string name="level">Level</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
</resources>