<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Avatar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="112dp"
        android:gravity="center"
        android:text="@string/avatar"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/avatar_Grid"
        android:layout_width="388dp"
        android:layout_height="384dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533">

        <ImageButton
            android:id="@+id/female_29"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseFemale_29"
            app:layout_column="3"
            app:layout_row="2"
            app:srcCompat="@drawable/female_29"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/male_30"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseMale_30"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/male_30"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/male_123"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseMale_123"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/male_123"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/male_122"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseMale_122"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/male_122"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/female_1"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseFemale_1"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/female_1"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/female_3"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseFemale_3"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/female_3"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/female_2"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseFemale_2"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/female_2"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/male_121"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="Choosemale_121"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/male_121"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/male_124"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseMale_124"
            app:layout_column="3"
            app:layout_row="1"
            app:srcCompat="@drawable/male_124"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/male_31"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseMale_31"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/male_31"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/female_25"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="@drawable/choosebtn"
            android:contentDescription="@string/app_name"
            android:onClick="ChooseFemale_25"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/female_25"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/female_18"
            android:layout_width="98dp"
            android:layout_height="131dp"
            android:onClick="ChooseFemale_18"
            android:contentDescription="@string/app_name"
            app:layout_column="3"
            app:layout_row="0"
            app:srcCompat="@drawable/female_18" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/avatar_Btn"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:background="@drawable/pink_rect_normal"
        android:onClick="ChooseAvatar"
        android:text="@string/getContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />


</androidx.constraintlayout.widget.ConstraintLayout>